--- a/index.html
+++ b/index.html
@@ -2,13 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Jack</title>
+    <title>wow</title>
 </head>
 <body>
-<button class="btn btn-primary">000</button>
+<nav  class="navbar navbar-default" role="navigation">
+    <div class="container">
+        <div   class="navbar-header">
+            <a href="index.html" class="navbar-brand">home</a>
+        </div>
+        <div>
+            <ul class="nav navbar-nav">
+                <li ><a href="javascript/indexofJS.html">javascript</a></li>
+            </ul>
+        </div>
+        <div style="float: right">
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">提交</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<div class="container" style="font-size: 30px">
+    some  basic thoughts about my study of web.<br>
+    this site is under constructon;<br>
+    give me some tips if you want ,dude
+</div>
+
 </body>
 </html>
